split index.js into multiple files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </title>
 </head>
 <script src="index.js"></script>
+<script src="truthTableLogic.js"></script>
+<script src="getShapes.js"></script>
+<script src="canvasLogic.js"></script>
 
 <body style="background-color: crimson; text-align: center;color: greenyellow;" onload="PageLoaded()">
     <header style="background-color: rgb(70, 70, 70);">
