Changes to table are now drawn in canvas

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </button>
     <br><br>
     <canvas id="mainCanvas" style="background-color: white;" height="600" width="600"></canvas>
-    <table id="truthTable" style="margin: auto;background-color: cyan;color:darkblue;border: 1px solid black"></table>
+    <table id="truthTable"
+        style="margin: auto;background-color: cyan;color:darkblue;border: 1px solid black;width: 600px;border-collapse: collapse;padding: 15px;">
+    </table>
 </body>
 
 </html>
